# MCFG-parser

./: .gitignore  README.md  pyproject.toml
src/mcfg_parser/: __init__.py  grammar.py  parser.py  tree.py
tests/: test_grammar.py  test_parser.py  test_tree.py
